Updated UI & Bug Fixes
Minor Release 1.1

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>scrcpy-gui-simple</name>
+	<name>Scrcpy-GUI</name>
 	<comment></comment>
 	<projects>
 	</projects>
