Update To Version 1.3.1 (Last Java Swing Version)
This Is Code Base For The Application From Version 1.0 To 1.3.1

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,9 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Student\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.annotations-25.2.0.jar=D:\\A P P S\\Scrcpy-GUI-main\\src\\ddmlib\\annotations-25.2.0.jar
+file.reference.common-25.2.0.jar=D:\\A P P S\\Scrcpy-GUI-main\\src\\ddmlib\\common-25.2.0.jar
+file.reference.ddmlib-25.2.0.jar=D:\\A P P S\\Scrcpy-GUI-main\\src\\ddmlib\\ddmlib-25.2.0.jar
+file.reference.guava-18.0.jar=D:\\A P P S\\Scrcpy-GUI-main\\src\\ddmlib\\guava-18.0.jar
+file.reference.guava-18.0.jar-1=D:\\A P P S\\Scrcpy-GUI-main\\src\\ddmlib\\guava-18.0.jar
+file.reference.kxml2-2.3.0.jar=D:\\A P P S\\Scrcpy-GUI-main\\src\\ddmlib\\kxml2-2.3.0.jar
+file.reference.kxml2-2.3.0.jar-1=D:\\A P P S\\Scrcpy-GUI-main\\src\\ddmlib\\kxml2-2.3.0.jar
+user.properties.file=C:\\Users\\desti\\AppData\\Roaming\\NetBeans\\13\\build.properties
