--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -18,8 +18,12 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
@@ -27,14 +31,33 @@ dist.dir=dist
 dist.jar=${dist.dir}/Scrcpy-GUI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.annotations-25.2.0.jar=src\\annotations-25.2.0.jar
+file.reference.beansbinding-1.2.1.jar=src\\Data\\beansbinding-1.2.1.jar
+file.reference.common-25.2.0.jar=src\\common-25.2.0.jar
+file.reference.ddmlib-25.2.0.jar=src\\ddmlib-25.2.0.jar
+file.reference.guava-18.0.jar=C:\\Users\\desti\\Downloads\\jar_files\\guava-18.0.jar
+file.reference.guava-18.0.jar-1=src\\guava-18.0.jar
+file.reference.kxml2-2.3.0.jar=C:\\Users\\desti\\Downloads\\jar_files\\kxml2-2.3.0.jar
+file.reference.kxml2-2.3.0.jar-1=src\\kxml2-2.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.guava-18.0.jar}:\
+    ${file.reference.kxml2-2.3.0.jar}:\
+    ${file.reference.annotations-25.2.0.jar}:\
+    ${file.reference.common-25.2.0.jar}:\
+    ${file.reference.ddmlib-25.2.0.jar}:\
+    ${file.reference.guava-18.0.jar-1}:\
+    ${file.reference.kxml2-2.3.0.jar-1}:\
+    ${file.reference.beansbinding-1.2.1.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -42,6 +65,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -55,7 +80,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=everything.gui
+main.class=app.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -67,9 +92,13 @@ run.classpath=\
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
